[package]
name = "committer"
version = "0.6.0"
edition = "2021"
description = "A simple git commit message generator"
license = "MIT"

[dependencies]
anyhow = "1.0"
inquire = { version = "0.7", features = ["editor"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
semver = "1.0.23"
